Add ability to send links with the secret

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -17,6 +17,7 @@
     <h1 class="h3 mb-3 font-weight-normal">Password Courier</h1>
     <input name="recipient" type="email" autocomplete="off" class="form-control" placeholder="Ontvanger als pietje@gmail.com" required autofocus>
     <textarea name="password" class="form-control" placeholder="Vul hier geheime informatie in" required></textarea>
+    <input name="userenteredlink" class="form-control" placeholder="Secret link"></textarea>
     <input name="uploadedfile" class="form-control" type="file" />
     <button class="btn btn-lg btn-primary btn-block" type="submit">Stuur op</button>
   </form>
