--- a/docroot/showsecrettemplate.html
+++ b/docroot/showsecrettemplate.html
@@ -15,6 +15,7 @@
   <div class="form-gspasswords shadow p-3 bg-white rounded">
     <img class="mb-4" src="/gs-logo2.png" alt="logo" width="102" height="82">
     <pre>{secret}</pre>
+    <a href="{userenteredlink}">{userenteredlink}</a>
     <p>{filelink}</p>
     <p>Deze informatie wordt over een uur verwijderd</p>
     <p><a href="/">Ga terug naar de hoofdpagina</a></p>
