Fix rendering uploaded file HTML
It was all rendered as escaped HTML first.

--- a/docroot/showsecrettemplate.html
+++ b/docroot/showsecrettemplate.html
@@ -16,7 +16,7 @@
     <img class="mb-4" src="/gs-logo2.png" alt="logo" width="102" height="82">
     <pre>{secret}</pre>
     <a href="{userenteredlink}">{userenteredlink}</a>
-    <p>{filelink}</p>
+    <p><a href="{filelink}">{filename}</a></p>
     <p>Deze informatie wordt over een uur verwijderd</p>
     <p><a href="/">Ga terug naar de hoofdpagina</a></p>
   </div>
